--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand page-link" href="index.html"><img src="img/la-chouette-agence.png"
+                        <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
                             data-toggle="collapse" data-target=".navbar-1">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
                         <ul class="site-navigation nav navbar-nav">
-                            <!-- Ajout d'une balise li pour portfolio + Réécriture du texte -->
+                            <!-- changement nom de la page2 en page contact -->
                             <li>
                                 <a class="page-link" href="index.html">Accueil</a>
                             </li>
