creation de la banniere de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="page-container">
         <!-- Remplacement des balises div par des balises sémantiquement correctes -->
         <!-- header -->
-        <!-- Suppression de mots-clefs cachés -->
+        <!-- Suppression de mots-clefs cachés "black hat" -->
         <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
@@ -61,3 +61,27 @@
             </div>
         </header>
         <!-- header END -->
+        <!-- main -->
+        <main>
+            <!-- bloc-1-presentation -->
+            <!-- Réécriture du titre h1 + alt image -->
+            <section
+                class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+                id="bloc-1-hero">
+                <div class="container bloc-lg">
+                    <div class="row tight-width-whitespace">
+                        <div class="col-sm-12">
+                            <img src="images/logo.jpg" class="center-block image-resize-mode" width="100"
+                                alt="Logo de La chouette agence" />
+                            <h1 class="text-center hero-bloc-text tc-white bold-text">
+                                La chouette agence
+                            </h1>
+                            <div class="text-center">
+                                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                                    id="cta-hero">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-1-presentation END -->
