--- a/index.html
+++ b/index.html
@@ -85,3 +85,63 @@
                 </div>
             </section>
             <!-- bloc-1-presentation END -->
+            <!-- bloc-2-services -->
+            <!-- Remplacement de deux images de texte par des balises p et blockquote -->
+            <section class="bloc bgc-white l-bloc" id="bloc-2-services">
+                <div class="container bloc-md">
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
+                            <p>La chouette agence est une agence web design qui aide<br /> les entreprises à devenir
+                                attractives et visibles sur Internet.</p>
+                        </div>
+                    </div>
+                    <div class="row voffset-lg med-width-whitespace">
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+                            </div>
+                            <h3 class="mg-md text-center">
+                                Web design
+                            </h3>
+                            <p class="text-center ">
+                                Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez
+                                de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+                            </p>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+                            </div>
+                            <h3 class="mg-md text-center">
+                                Stratégie
+                            </h3>
+                            <p class="text-center ">
+                                Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
+                                comprendre vos objectifs commerciaux afin de vous proposer le meilleur design
+                                possible.<br>
+                            </p>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+                            </div>
+                            <h3 class="mg-md text-center">
+                                Illustrations
+                            </h3>
+                            <p class="text-center ">
+                                Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
+                                graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row voffset-lg voffset">
+                        <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+                            <blockquote class="blockquote">"La chouette agence est une excellente agence web ! Les web
+                                designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre
+                                site. Cela nous a aidé à doubler nos vente en ligne à Lyon." <br /> <span
+                                    class="blockquote-name">Maxime Guibard, PDG de A vos fourchettes</span></blockquote>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-2-services END -->
