creation du bloc 4 du main

--- a/index.html
+++ b/index.html
@@ -171,3 +171,72 @@
                 </div>
             </section>
             <!-- bloc-3 END -->
+            <!-- bloc-4-portfolio -->
+            <!-- Creation d'un h2 + remplcement h2 par h3 et réécriture + Réécriture des alt -->
+            <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+                <div class="container bloc-lg">
+                    <div class="row">
+                        <hgroup class="col-sm-12 text-center">
+                            <h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+                        </hgroup>
+                    </div>
+                    <div class="row tight-width-whitespace portfolio-row">
+                        <article class="portfolio-article col-sm-6">
+                            <a href="#" data-lightbox="images/journal_local.jpg" data-gallery-id="gallery-1"
+                                data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+                                    src="images/journal_local.jpg"
+                                    alt="La Chouette Agence : refonte du site web d'un journal local."
+                                    class="img-responsive portfolio-thumb" /></a>
+                            <h3 class="mg-md text-center">
+                                Refonte d'un site web pour un journal local
+                            </h3>
+                            <p class="text-center">
+                                Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
+                            </p>
+                        </article>
+                        <article class="portfolio-article col-sm-6">
+                            <a href="#" data-lightbox="images/photographie.jpg" data-gallery-id="gallery-1"
+                                data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
+                                    src="images/photographie.jpg" class="img-responsive portfolio-thumb"
+                                    alt="La Chouette Agence : création d'un site web pour photographes." /></a>
+                            <h3 class="mg-md text-center">
+                                Création d'un site web pour photographes
+                            </h3>
+                            <p class="text-center">
+                                Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
+                            </p>
+                        </article>
+                    </div>
+                    <div class="row tight-width-whitespace portfolio-row">
+                        <article class="portfolio-article col-sm-6">
+                            <a href="#" data-lightbox="images/voyage.png" data-gallery-id="gallery-1"
+                                data-caption="Création d'un site internet pour un voyageur"
+                                data-frame="snapshot-lb"><img src="images/site_internet_voyage.jpg"
+                                    class="img-responsive portfolio-thumb"
+                                    alt="La Chouette Agence : création d'un site web pour voyageur." /></a>
+                            <h3 class="mg-md text-center">
+                                Création d'un site internet pour un voyageur
+                            </h3>
+                            <p class="text-center">
+                                Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
+                                articles de ce voyageur.
+                            </p>
+                        </article>
+                        <article class="portfolio-article col-sm-6">
+                            <a href="#" data-lightbox="images/mariage.png" data-gallery-id="gallery-1"
+                                data-caption="Conception d'un site pour une agence de mariage"
+                                data-frame="snapshot-lb"><img src="images/agence_de_mariage.jpg"
+                                    class="img-responsive portfolio-thumb"
+                                    alt="La Chouette Agence : création d'un site web pour agence de mariage" /></a>
+                            <h3 class="mg-md text-center">
+                                Conception d'un site pour une agence de mariage
+                            </h3>
+                            <p class="text-center">
+                                Nous avons travaillé avec cette agence pour créer un site internet permettant la
+                                présentation détaillée de leurs prestations.
+                            </p>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-4-portfolio END -->
