--- a/index.html
+++ b/index.html
@@ -240,3 +240,20 @@
                 </div>
             </section>
             <!-- bloc-4-portfolio END -->
+            <!-- bloc-5 -->
+            <!-- Remplacement h2 par p  -->
+            <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+                <div class="container bloc-lg">
+                    <div class="cta row">
+                        <h2 class="mg-md text-center tc-white bold-text">
+                            Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+                        </h2>
+                        <div class="col-sm-12 text-center">
+                            <a href="contact.html"
+                                class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-5 END -->
+        </main>
