creation du footer et modifications des liens

--- a/index.html
+++ b/index.html
@@ -257,3 +257,75 @@
             </section>
             <!-- bloc-5 END -->
         </main>
+        <!-- Footer -->
+        <!-- Remplacement des liens + remplacement des icones par images jpg + supression mots-clefs cachés + suppression annuaire 2 + suppression liens non cohérents -->
+        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+            <div class="container bloc-sm">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="text-center grey">
+                            La chouette agence - Agence web design basée à Lyon<br>
+                        </p>
+                        <div class="row row-no-gutters social">
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" href="http://twitter.com"><img src="images/twitter.jpg"
+                                            class="icon-md" alt="icone facebook"></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" href="http://facebook.com"><img src="images/facebook.jpg"
+                                            class="icon-md" alt="icone dribble"></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" href="http://ribble.com"><img src="images/ribble.jpg"
+                                            class="icon-md" alt="icone twitter"></a>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="text-center">
+                                    <a class="social" href="http://instagram.com"><img src="images/instagram.jpg"
+                                            class="icon-md" alt="icone instagram"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row partner-url">
+                            <div class="col-sm-4">
+                                Partenaires
+                                <ul>
+                                    <li><a href="mariage.com">Agence de mariage</a></li>
+                                    <li><a href="photographie.com">Hébergement de photographies</a></li>
+                                    <li><a href="lequotdiendelyon.com">Le quotidien de Lyon</a></li>
+                                    <li><a href="voyage.com">Agence de voyage</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-4">
+                                Annuaire
+                                <ul>
+                                    <li><a href="mairiedelyon.com">Mairie de Lyon</a></li>
+                                    <li><a href="annuairemarketing.com">Annuaire marketing</a></li>
+
+
+                                    <li><a href="annuairewordpress.com">Annuaire des entreprises de Lyon</a></li>
+                                    <li><a href="listeagence.com">Liste agences de web design</a></li>
+                                    <li><a href="meilleuresagenceslyon.com">Meilleures agences Lyon</a></li>
+                                    <li><a href="listeseo.com">Listeseo</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Footer - bloc-8 END -->
+
+    </div>
+    <!-- Principal conteneur END -->
+
+
+</body>
+
+</html>
