--- a/contact.html
+++ b/contact.html
@@ -27,3 +27,113 @@
     <title>La chouette agence-Webdesign</title>
 </head>
 <!-- Fin du head -->
+
+<body>
+    <!-- Principal conteneur -->
+    <div class="page-container">
+
+        <!-- header -->
+
+        <header class="bloc bgc-white l-bloc " id="bloc-0">
+            <div class="container bloc-sm">
+                <nav class="navbar row">
+                    <div class="navbar-header">
+                        <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.png"
+                                alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
+                        <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+                            data-toggle="collapse" data-target=".navbar-1">
+                            <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                                class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+                        <ul class="site-navigation nav navbar-nav">
+                            <!-- Correction des balises li -->
+                            <li>
+                                <a class="page-link" href="index.html">Accueil</a>
+                            </li>
+
+                            <li>
+                                <a class="page-link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <!-- header END -->
+
+        <main>
+            <!-- bloc-6 -->
+            <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
+                id="bloc-6">
+                <div class="container bloc-lg">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h1 class="text-center hero-bloc-text tc-orange tc-orange-contact">
+                                Parlons web design !
+                            </h1>
+                            <p class="text-center mg-lg tc-orange tight-width-whitespace tc-orange-contact">
+                                Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+                                Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-6 END -->
+
+            <!-- bloc-7 -->
+            <section class="bloc bgc-white l-bloc" id="bloc-7">
+                <div class="container bloc-lg">
+                    <div class="row adress-form">
+                        <div class="col-sm-6 form">
+                            <h2 class="mg-md text-center tc-grey">Formulaire de contact</h2>
+                            <form id="form_1" method="post" action="traitement_php" novalidate>
+                                <!--deleted text : success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
+                                <div class="form-group">
+                                    <label for="name">
+                                        Nom
+                                    </label>
+                                    <input id="name" class="form-control" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">
+                                        Adresse email
+                                    </label>
+                                    <input id="email" class="form-control" type="email" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="input_504">
+                                        Comment nous avez-vous connu ?
+                                    </label>
+                                    <input class="form-control" type="email" required id="input_504" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">
+                                        Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+                                    </label><textarea id="message" class="form-control" rows="4" cols="50"
+                                        required></textarea>
+                                </div>
+                                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+                                    type="submit">
+                                    Envoyer
+                                </button>
+                            </form>
+                        </div>
+                        <!-- Correction lien adresse mail avec ajout de l'attribut mailto -->
+                        <p class="col-sm-6 email-grey">
+                            <a class="ltc-white email-grey-link"
+                                href="mailto:contact@lachouetteagence.com">Conctact@lachouetteagence</a><br />
+                            2 place Sathonay, 69001 Lyon<br />
+                            Ouvert de 9h à 18h, du lundi au vendredi
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <!-- bloc-7 END -->
+        </main>
+
+        <!-- ScrollToTop Button -->
+        <!-- <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
+        <!-- ScrollToTop Button END -->
