modif sur index

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
                         <article class="portfolio-article col-sm-6">
-                            <a href="#" data-lightbox="images/voyage.png" data-gallery-id="gallery-1"
+                            <a href="#" data-lightbox="images/voyage.jpg" data-gallery-id="gallery-1"
                                 data-caption="Création d'un site internet pour un voyageur"
                                 data-frame="snapshot-lb"><img src="images/site_internet_voyage.jpg"
                                     class="img-responsive portfolio-thumb"
@@ -223,7 +223,7 @@
                             </p>
                         </article>
                         <article class="portfolio-article col-sm-6">
-                            <a href="#" data-lightbox="images/mariage.png" data-gallery-id="gallery-1"
+                            <a href="#" data-lightbox="images/mariage.jpg" data-gallery-id="gallery-1"
                                 data-caption="Conception d'un site pour une agence de mariage"
                                 data-frame="snapshot-lb"><img src="images/agence_de_mariage.jpg"
                                     class="img-responsive portfolio-thumb"
