--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="container bloc-lg">
                     <div class="row">
                         <hgroup class="col-sm-12 text-center">
-                            <h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+                            <h2>Nous travaillons avec beaucoup de clients,<br /> voici nos réalisations.</h2>
                         </hgroup>
                     </div>
                     <div class="row tight-width-whitespace portfolio-row">
