--- a/index.html
+++ b/index.html
@@ -292,35 +292,50 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row partner-url">
+                        <div class="row">
                             <div class="col-sm-4">
                                 Partenaires
                                 <ul>
-                                    <li><a href="mariage.com">Agence de mariage</a></li>
-                                    <li><a href="photographie.com">Hébergement de photographies</a></li>
-                                    <li><a href="lequotdiendelyon.com">Le quotidien de Lyon</a></li>
-                                    <li><a href="voyage.com">Agence de voyage</a></li>
+                                    <li><a href="voiture.com">voiture.com</a></li>
+                                    <li><a href="pizza.com">pizza.com</a></li>
+                                    <li><a href="matoiture.com">matoiture.com</a></li>
+                                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
-                                Annuaire
+                                Annuaires liste 1
                                 <ul>
-                                    <li><a href="mairiedelyon.com">Mairie de Lyon</a></li>
-                                    <li><a href="annuairemarketing.com">Annuaire marketing</a></li>
-
-
-                                    <li><a href="annuairewordpress.com">Annuaire des entreprises de Lyon</a></li>
-                                    <li><a href="listeagence.com">Liste agences de web design</a></li>
-                                    <li><a href="meilleuresagenceslyon.com">Meilleures agences Lyon</a></li>
-                                    <li><a href="listeseo.com">Listeseo</a></li>
+                                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
+                                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
+                                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+                                    <li><a href="123seoture.com">123seo.com</a></li>
+                                    <li><a href="123site.com">123site.com</a></li>
+                                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
+                                    <li><a href="listeagence.com">listeagence.com</a></li>
+                                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+                                    <li><a href="listeseo.com">listeseo.com</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-4">
+                                Annuaires liste 2
+                                <ul>
+                                    <li><a href="betterseo.com">betterseo.com</a></li>
+                                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
+                                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
+                                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
+                                    <li><a href="liensagogo.com">liensagogo.com</a></li>
+                                    <li><a href="backlink.com">backlink.com</a></li>
+                                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+                                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+                                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- Footer - bloc-8 END -->
+    </div>
+    <!-- Footer - bloc-8 END -->
 
     </div>
     <!-- Principal conteneur END -->
