--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.png"
+                        <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
                             data-toggle="collapse" data-target=".navbar-1">
@@ -65,23 +65,25 @@
 
         <main>
             <!-- bloc-6 -->
-            <section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
+            <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper"
                 id="bloc-6">
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h1 class="text-center hero-bloc-text tc-orange tc-orange-contact">
+                            <h1 class="text-center hero-bloc-text tc-white">
                                 Parlons web design !
                             </h1>
-                            <p class="text-center mg-lg tc-orange tight-width-whitespace tc-orange-contact">
+                            <p class="text-center mg-lg tc-white tight-width-whitespace">
                                 Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
                                 Parlez-nous de votre projet en complétant le formulaire ci-dessous.
                             </p>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- bloc-6 END -->
+
+
 
             <!-- bloc-7 -->
             <section class="bloc bgc-white l-bloc" id="bloc-7">
@@ -123,13 +125,13 @@
                         </div>
                         <!-- Correction lien adresse mail avec ajout de l'attribut mailto -->
                         <p class="col-sm-6 email-grey">
-                            <a class="ltc-white email-grey-link"
-                                href="mailto:contact@lachouetteagence.com">Conctact@lachouetteagence</a><br />
-                            2 place Sathonay, 69001 Lyon<br />
-                            Ouvert de 9h à 18h, du lundi au vendredi
-                        </p>
+                        <div class="ltc-white email-grey-link">
+                            <p>contact@lachouetteagence.com<br />
+                                2 place Sathonay, 69001 Lyon<br />
+                                Ouvert de 9h à 18h, du lundi au vendredi
+                            </p>
+                        </div>
                     </div>
-                </div>
             </section>
             <!-- bloc-7 END -->
         </main>
