--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,10 @@
                 <div class="container bloc-lg">
                     <div class="row">
                         <div class="col-sm-12">
-                            <h1 class="text-center hero-bloc-text tc-white">
+                            <h1 class="text-center hero-bloc-text tc-black">
                                 Parlons web design !
                             </h1>
-                            <p class="text-center mg-lg tc-white tight-width-whitespace">
+                            <p class="text-center mg-lg tc-black tight-width-whitespace">
                                 Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
                                 Parlez-nous de votre projet en complétant le formulaire ci-dessous.
                             </p>
@@ -82,9 +82,6 @@
                 </div>
             </div>
             <!-- bloc-6 END -->
-
-
-
             <!-- bloc-7 -->
             <section class="bloc bgc-white l-bloc" id="bloc-7">
                 <div class="container bloc-lg">
@@ -123,30 +120,33 @@
                                 </button>
                             </form>
                         </div>
-                        <!-- Correction lien adresse mail avec ajout de l'attribut mailto -->
+
                         <p class="col-sm-6 email-grey">
-                        <div class="ltc-white email-grey-link">
-                            <p>contact@lachouetteagence.com<br />
-                                2 place Sathonay, 69001 Lyon<br />
-                                Ouvert de 9h à 18h, du lundi au vendredi
-                            </p>
-                        </div>
+                            <a class="ltc-white email-grey-link"
+                                href="mailto:contact@lachouetteagence.com">Email</a><br />
+                            2 place Sathonay, 69001 Lyon<br />
+                            Ouvert de 9h à 18h, du lundi au vendredi
+                        </p>
                     </div>
+                </div>
             </section>
             <!-- bloc-7 END -->
+
+
+
+
         </main>
 
         <!-- ScrollToTop Button -->
         <!-- <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a> -->
         <!-- ScrollToTop Button END -->
-        <!-- Footer -->
-        <!-- Modification du footer pour le rendre similaire à celui de la page d'accueil -->
-        <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+        <!-- Footer - bloc-8 -->
+        <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="text-center grey">
-                            La chouette agence - Agence web basée à Lyon<br>
+                        <p class="text-center white">
+                            La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
@@ -174,40 +174,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row partner-url">
-                            <div class="col-sm-4">
-                                Partenaires
-                                <ul>
-                                    <li><a href="mariage.com">Agence de mariage</a></li>
-                                    <li><a href="photographie.com">Hébergement de photographies</a></li>
-                                    <li><a href="lequotdiendelyon.com">Le quotidien de Lyon</a></li>
-                                    <li><a href="voyage.com">Agence de voyage</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4">
-                                Annuaire
-                                <ul>
-                                    <li><a href="mairiedelyon.com">Mairie de Lyon</a></li>
-                                    <li><a href="annuairemarketing.com">Annuaire marketing</a></li>
-
-
-                                    <li><a href="annuairewordpress.com">Annuaire des entreprises de Lyon</a></li>
-                                    <li><a href="listeagence.com">Liste agences de web design</a></li>
-                                    <li><a href="meilleuresagenceslyon.com">Meilleures agences Lyon</a></li>
-                                    <li><a href="listeseo.com">Listeseo</a></li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- Footer - bloc-8 END -->
-
+        </div>
     </div>
+
+    <!-- Footer - bloc-8 END -->
+
+
     <!-- Principal conteneur END -->
 
 
 </body>
-
-</html>
