--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     </div>
                 </nav>
             </div>
+
+
         </header>
         <!-- header END -->
         <!-- main -->
@@ -263,25 +265,27 @@
             <div class="container bloc-sm">
                 <div class="row">
                     <div class="col-sm-12">
+                        <!-- modifiation du texte original, ajout du mot design -->
                         <p class="text-center grey">
-                            La chouette agence - Agence web basée à Lyon<br>
+                            La chouette agence - Agence webdesign basée à Lyon<br>
                         </p>
+                        <p>
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://twitter.com"><img src="images/twitter.jpg"
+                                    <a class="social" href="http://facebook.com"><img src="images/facebook.jpg"
                                             class="icon-md" alt="icone facebook"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://facebook.com"><img src="images/facebook.jpg"
+                                    <a class="social" href="http://dribble.com"><img src="images/ribble.jpg"
                                             class="icon-md" alt="icone dribble"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://ribble.com"><img src="images/ribble.jpg"
+                                    <a class="social" href="http://twitter.com"><img src="images/twitter.jpg"
                                             class="icon-md" alt="icone twitter"></a>
                                 </div>
                             </div>
@@ -292,6 +296,8 @@
                                 </div>
                             </div>
                         </div>
+                        </p>
+
                         <div class="row">
                             <div class="col-sm-4">
                                 Partenaires
@@ -334,12 +340,7 @@
                     </div>
                 </div>
             </div>
-    </div>
-    <!-- Footer - bloc-8 END -->
-
-    </div>
-    <!-- Principal conteneur END -->
-
+        </footer>
 
 </body>
 
