--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://dribble.com"><img src="images/ribble.jpg"
+                                    <a class="social" href="http://dribble.com"><img src="images/dribble.jpg"
                                             class="icon-md" alt="icone dribble"></a>
                                 </div>
                             </div>
