--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://ribble.com"><img src="images/ribble.jpg"
+                                    <a class="social" href="http://dribble.com"><img src="images/dribble.jpg"
                                             class="icon-md" alt="icone twitter"></a>
                                 </div>
                             </div>
