mod texte du lien mail dans page contact

--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
 
                         <p class="col-sm-6 email-grey">
                             <a class="ltc-white email-grey-link"
-                                href="mailto:contact@lachouetteagence.com">Email</a><br />
+                                href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br />
                             2 place Sathonay, 69001 Lyon<br />
                             Ouvert de 9h à 18h, du lundi au vendredi
                         </p>
