--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
                 <div class="container bloc-lg">
                     <div class="cta row">
-                        <h2 class="mg-md text-center tc-white bold-text">
+                        <h2 class="mg-md text-center tc-black bold-text">
                             Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
                         </h2>
                         <div class="col-sm-12 text-center">
@@ -300,7 +300,7 @@
 
                         <div class="row">
                             <div class="col-sm-4">
-                                Partenaires
+                                <h4>Partenaires</h4>
                                 <ul>
                                     <li><a href="voiture.com">voiture.com</a></li>
                                     <li><a href="pizza.com">pizza.com</a></li>
@@ -309,7 +309,7 @@
                                 </ul>
                             </div>
                             <div class="col-sm-4">
-                                Annuaires liste 1
+                                <h4>Annuaires liste 1</h4>
                                 <ul>
                                     <li><a href="annuaireagence.com">annuaireagence.com</a></li>
                                     <li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -323,7 +323,7 @@
                                 </ul>
                             </div>
                             <div class="col-sm-4">
-                                Annuaires liste 2
+                                <h4>Annuaires liste 2</h4>
                                 <ul>
                                     <li><a href="betterseo.com">betterseo.com</a></li>
                                     <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
