--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords"
-        content="agence webdesign,Lyon,site web,portfolio,illustration,construction site web,SEO,référencement">
+        content="agence webdesign,Lyon,site web,portfolio,illustration,construction site web,entreprise,SEO,référencement">
     <meta name="description" content="La chouette agence est une entreprise de webdesign située à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="robots" content="index,follow" />
@@ -267,7 +267,7 @@
                     <div class="col-sm-12">
                         <!-- modifiation du texte original, ajout du mot design -->
                         <p class="text-center grey">
-                            La chouette agence - Agence webdesign basée à Lyon<br>
+                            La chouette agence - Agence webdesign, basée à Lyon<br>
                         </p>
                         <p>
                         <div class="row row-no-gutters social">
@@ -302,38 +302,33 @@
                             <div class="col-sm-4">
                                 <h4>Partenaires</h4>
                                 <ul>
-                                    <li><a href="voiture.com">voiture.com</a></li>
-                                    <li><a href="pizza.com">pizza.com</a></li>
-                                    <li><a href="matoiture.com">matoiture.com</a></li>
-                                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
+                                    <li><a href="mariagelyon.com"> Lyon mariage </a></li>
+                                    <li><a href="photographie.com">Photographie Lyon</a></li>
+                                    <li><a href="lyonvoyages.com">Lyon Voyages</a></li>
+                                    <li><a href="quotidienlyon.com">Le quotidien de Lyon</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
                                 <h4>Annuaires liste 1</h4>
                                 <ul>
-                                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                                    <li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-                                    <li><a href="123seoture.com">123seo.com</a></li>
-                                    <li><a href="123site.com">123site.com</a></li>
-                                    <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-                                    <li><a href="listeagence.com">listeagence.com</a></li>
-                                    <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-                                    <li><a href="listeseo.com">listeseo.com</a></li>
+                                    <li><a href="annuaireagence.com">annuaireagence</a></li>
+                                    <li><a href="lyondesign.com">Lyon webdesign</a></li>
+                                    <li><a href="mairiedelyon.com">Mairie de Lyon</a></li>
+                                    <li><a href="123site.com">123 site</a></li>
+                                    <li><a href="annuairewordpress.com">Annuaire wordpress</a></li>
+                                    <li><a href="listeentreprises.com">Liste entreprises</a></li>
+                                    <li><a href="meilleuresagenceswebdesign.com">Meilleures agences webdesign/a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
                                 <h4>Annuaires liste 2</h4>
                                 <ul>
-                                    <li><a href="betterseo.com">betterseo.com</a></li>
-                                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                                    <li><a href="backlink.com">backlink.com</a></li>
-                                    <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-                                    <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-                                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+                                    <li><a href="betterseo.com">Betterseo</a></li>
+                                    <li><a href="ameliorerseo.com">Ameliorerseo</a></li>
+                                    <li><a href="seojuicelien.com">Seojuicelien</a></li>
+                                    <li><a href="meilleursliens.com">Meilleursliens</a></li>
+                                    <li><a href="liensagogo.com">Liensagogo</a></li>
+                                    <li><a href="vraiseofiable.com">Vraiseofiable</a></li>
                                 </ul>
                             </div>
                         </div>
