correction erreur dans link footer

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                     <li><a href="123site.com">123 site</a></li>
                                     <li><a href="annuairewordpress.com">Annuaire wordpress</a></li>
                                     <li><a href="listeentreprises.com">Liste entreprises</a></li>
-                                    <li><a href="meilleuresagenceswebdesign.com">Meilleures agences webdesign/a></li>
+                                    <li><a href="meilleuresagenceswebdesign.com">Meilleures agences webdesign</a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-4">
