--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
             <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
                 <div class="container bloc-lg">
                     <div class="cta row">
-                        <h2 class="mg-md text-center tc-black bold-text">
+                        <p id="special">
                             Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-                        </h2>
+                        </p>
                         <div class="col-sm-12 text-center">
                             <a href="contact.html"
                                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
