changement taile police de caracteres dans un paragraphe 162 a 167

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 Lyonnaise à se développer et à
                                 connaître le succès.Nous travaillons pour aider les entreprises à attirer de nouveaux
                                 clients.</h2>
-                            <p class="text-center white">
+                            <p class="text-center white" style="font-size: 14px;">
                                 Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale,
                                 qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur
                                 site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
