--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
 
         <!-- header -->
 
-        <header class="bloc bgc-white l-bloc " id="bloc-0">
+        <header class="bloc bgc-white l-bloc " id="bloc-0" aria-label="primary">
             <div class="container bloc-sm">
                 <nav class="navbar row">
                     <div class="navbar-header">
                         <a class="navbar-brand page-link" href="index.html"><img src="images/la-chouette-agence.jpg"
                                 alt="Page d'accueil La chouette agence - Entreprise web design Lyon" height="40" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-                            data-toggle="collapse" data-target=".navbar-1">
+                            data-toggle="collapse" data-target=".navbar-1" aria-label="Menu">
                             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                                 class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
@@ -50,7 +50,7 @@
                         <ul class="site-navigation nav navbar-nav">
                             <!-- Correction des balises li -->
                             <li>
-                                <a class="page-link" href="index.html">Accueil</a>
+                                <a class="page-link" href="index.html" title="Revenez à la page d'accueil">Accueil</a>
                             </li>
 
                             <li>
@@ -88,7 +88,8 @@
                     <div class="row adress-form">
                         <div class="col-sm-6 form">
                             <h2 class="mg-md text-center tc-grey">Formulaire de contact</h2>
-                            <form id="form_1" method="post" action="traitement_php" novalidate>
+                            <form id="form_1" method="post" action="traitement_php" novalidate role="form"
+                                aria-label="contact information">
                                 <!--deleted text : success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"-->
                                 <div class="form-group">
                                     <label for="name">
@@ -148,32 +149,39 @@
         <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-12" aria-label="secondary">
                         <p class="text-center black">
                             La chouette agence - Agence web basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://twitter.com"><img src="images/twitter.jpg"
+                                    <a class="social" href="http://twitter.com" target="_blank"
+                                        title="Retrouvez-nous sur Twitter !"
+                                        aria-label="retrouvez-nous sur twitter"><img src="images/twitter.jpg"
                                             class="icon-md" alt="icone facebook"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://facebook.com"><img src="images/facebook.jpg"
+                                    <a class="social" href="http://facebook.com" target="_blank"
+                                        title="Retrouvez-nous sur Facebook !"
+                                        aria-label="retrouvez-nous sur facebook"><img src="images/facebook.jpg"
                                             class="icon-md" alt="icone dribble"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://dribble.com"><img src="images/dribble.jpg"
-                                            class="icon-md" alt="icone twitter"></a>
+                                    <a class="social" href="http://dribble.com" target="_blank"
+                                        title="Retrouvez-nous sur Dribble!" aria-label="retrouvez-nous sur dribble"><img
+                                            src="images/dribble.jpg" class="icon-md" alt="icone twitter"></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="social" href="http://instagram.com"><img src="images/instagram.jpg"
+                                    <a class="social" href="http://instagram.com" target="_blank"
+                                        title="Retrouvez-nous sur Instagram ! "
+                                        aria-label="retrouvez-nous sur instagram"><img src="images/instagram.jpg"
                                             class="icon-md" alt="icone instagram"></a>
                                 </div>
                             </div>
