ajout label aria banner

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- Réécriture du titre h1 + alt image -->
             <section
                 class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
-                id="bloc-1-hero">
+                id="bloc-1-hero" role=banner aria-label="bannière">
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace">
                         <div class="col-sm-12">
