--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="page-container">
         <!-- Remplacement des balises div par des balises sémantiquement correctes -->
         <!-- header -->
-        <!-- Suppression de mots-clefs cachés "black hat" -->
+        <!-- Suppression de mots-clés cachés "black hat" -->
         <header class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
                 <nav class="navbar row">
@@ -84,7 +84,7 @@
                 <div class="container bloc-lg">
                     <div class="row tight-width-whitespace">
                         <div class="col-sm-12">
-                            <img src="images/logo.jpg" class="center-block image-resize-mode" width="100"
+                            <img src="images/logo.png" class="center-block image-resize-mode" width="100"
                                 alt="Logo de La chouette agence" />
                             <h1 class="text-center hero-bloc-text tc-white bold-text">
                                 La chouette agence
